test/tests/stages/14_pointers/invalid_parse/malformed_function_declarator_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[8]:
  int
  identifier(foo)
  (
  (
  void
  )
  )
  ;
